Fix dropdown list z-index to enable use inside modals

--- a/src/components/dropdown-list/dropdown-list.scss
+++ b/src/components/dropdown-list/dropdown-list.scss
@@ -18,6 +18,7 @@ $easeOutSine: cubic-bezier(0.390, 0.575, 0.565, 1.000);
     opacity 0.3s $easeOutSine;
     overflow: hidden;
     @extend .z-depth-1;
+    z-index: 1000;
 
     .dropdown-content {
         background-color: white;
@@ -83,4 +84,5 @@ $easeOutSine: cubic-bezier(0.390, 0.575, 0.565, 1.000);
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 1000;
 }
